Fix dialog z-index

--- a/src/dialog/dialog.scss
+++ b/src/dialog/dialog.scss
@@ -1,6 +1,11 @@
 .dialog {
   position: relative;
   display: inline-block;
+  z-index: 5;
+
+  &.is-shown {
+    z-index: 6;
+  }
 
   div.dialog-trigger {
     display: inline-block;
